--- a/application/FSPOC-WebProject/Content/scss/Mozaic.scss
+++ b/application/FSPOC-WebProject/Content/scss/Mozaic.scss
@@ -10,6 +10,14 @@ body.mozaicComponentManagerModule {
         top: 360px;
         padding: 50px;
     }
+
+    #lowerPanelSpinnerOverlay {
+        position: absolute;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 1100;
+        display: none;
+    }
 }
 body.mozaicEditorModule {
     background-color: #f2f2f3;
